// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevDataStore createTodo adds new todo to collection 1`] = `
DevDataStore {
  "__generateId": [MockFunction] {
    "calls": Array [
      Array [],
    ],
  },
  "_todos": Array [
    Object {
      "description": "Foo",
      "id": "test-id",
    },
  ],
}
`;

exports[`DevDataStore getTodos returns Todo collection 1`] = `
Array [
  Object {
    "description": "Foo",
    "id": "test-id",
  },
]
`;
